@@ -1,1 +1,1 @@
-DIST squashmount-v8.7.4.tar.gz 52304 SHA256 a402a3504c126e8c0252acd0a7073e96fd04a646daaf0f78d5570e4cfa2efb70 SHA512 7faf777f7c12451236a9673f5a1757d765294249a2a1e445f64ec3457f3463368f69c3881e2c668bf0b535f55d42860f92bf8302618c1eeaaf48d3486e46a889 WHIRLPOOL 93df56d03bc15843fb3459b3047b36c2b3006fdb0fcce9eec5e8f54e5230084e8d675223f948440a79d37e833273bdbcddbadebb2a758ee781b8e7b3e7481f1c
+DIST squashmount-v8.7.5.tar.gz 52796 SHA256 2270dbdd1a5b81a9b5a6d761ffe939269de4b272ac4523cb27706aca60d839a8 SHA512 2ab91c56850d9bbfc2e3fe26c48f3da66b764d8a541aa578f9912ada58b21f7ef4d267616c0920fdcb30777036f355855cd1f17756905a4a4b2fc2828f2e1925 WHIRLPOOL 3af62b0550a83a368a7457b8cc63018909a91445de1fa98d33ebd37dd4f6320d92e04f0a6033349f9e75a812a70dc855c8fb861e55311509435e55a765fbf00e
